Sonarcloud fixes
Request:None
Change-Id: I74cb13fe361f0ef90cfa586881d7290db36dde7d